Added most of the other results.

--- a/school/elec_302/lab_05/tex/report.tex
+++ b/school/elec_302/lab_05/tex/report.tex
@@ -86,6 +86,21 @@ control knob turned fully {CCW}.
 \section{Results}
 
 \subsection{Prime Mover Operation}
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{*{6}{c}}
+    \textbf{Voltage} & \multicolumn{2}{c}{\textbf{Speed}} & \textbf{Direction}
+    & \textbf{Friction} & \textbf{Torque} \\
+    $E_1$ V & $n$ rpm & $N$ rpm & CW/CCW & $T_f$ N-m & $T$ N-m \\
+    \hline
+     30.10 &  503.0 &  509.6 &  CW & -0.18 & -1.60 \\
+    -30.19 & -508.0 & -513.0 & CCW &   --- &   --- \\
+  \end{tabular}
+  \caption{}
+  \label{}
+\end{table}
+
 \begin{table}[H]
   \centering
   \begin{tabular}{*{3}{c}}
@@ -115,6 +130,18 @@ control knob turned fully {CCW}.
 \end{figure}
 
 \subsection{Dynamometer Operation}
+
+\begin{table}[H]
+  \centering
+  \begin{tabular}{*{5}{c}}
+    $n$ rpm & $T_{DYN}$ N-m& $T_{PM}$ N-m & $T_{NC}$ N-m & $T_C$ N-m \\
+    \hline
+    1500 &   0 & -0.66 &  --- &  --- \\
+    1500 & 2.0 & -2.26 & 1.76 & 2.33 \\
+  \end{tabular}
+  \caption{}
+  \label{}
+\end{table}
 
 \subsection{Motor Losses and Efficiency}
 \begin{table}[H]
